--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.6;
   color: #1f2937;
-  background-color: #f9fafb;
+  background-color: #ffffff;
 }
 
 /* Custom Scrollbar */
